--- a/public/game.html
+++ b/public/game.html
@@ -1,17 +1,13 @@
 <html><head>
-  <meta charset="UTF-8">
+    <script src="p5.js"></script>
+    <script src="p5.dom.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="ml5.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-database.js"></script>
 
-  <title>Pitch Tone Game</title>
-  <script src="p5.js"></script>
-  <script src="p5.dom.min.js"></script>
-  <script src="p5.sound.min.js"></script>
-  <script src="ml5.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-database.js"></script>
-  <script src="firebase-ui-auth.js"></script>
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css">
-<script src="firesetup.js"></script>
+    <script src="firesetup.js"></script>
 <script type="text/javascript">
   var userId;
   initApp = function() {
@@ -33,7 +29,6 @@
           // document.getElementById('user-id').textContent = uid;
           // document.getElementById('user-id').innerText = uid;
           userId = uid;
-          window.location.href = 'game.html';
 
           // document.getElementById('account-details').textContent = JSON.stringify({
           //   displayName: displayName,
@@ -63,14 +58,11 @@
   });
 </script>
 </head>
-
 <body>
-  
-  <h1>Welcome to The Pitch Tone Game!</h1>
-  <h2>Please log in or sign up to continue</h2>
-  <!-- <script src="sketch.js"></script>
+    <h1>Pitch Tone Game</h1>
+  <script src="sketch.js"></script>
   <script src="pipe.js"></script>
-  <script src="notes.js"></script> -->
+  <script src="notes.js"></script>
 
   <div id="firebaseui-auth-container">
     <div id="sign-in-status"></div>
@@ -79,4 +71,6 @@
     
   </div>
   <div id="user-info"></div>
-</body></html>
+</body>
+
+</html>
