removed google login, fixed save button

--- a/public/game.html
+++ b/public/game.html
@@ -23,7 +23,7 @@
         var providerData = user.providerData;
         user.getIdToken().then(function(accessToken) {
           document.getElementById('sign-in-status').textContent = 'Signed in';
-          document.getElementById('user-info').textContent = 'User info here';
+          document.getElementById('user-info').textContent = 'No user info yet!';
           // document.getElementById('sign-in').textContent = 'Sign out';
           //document.getElementById('user-email').textContent = email;
           // document.getElementById('user-id').textContent = uid;
