--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,8 @@
   
   <h1>Welcome to The Pitch Tone Game!</h1>
   <h2>Please log in or sign up to continue</h2>
+  <h3>Instructions:</h3>
+  <h3>In this game, you control a ball moving through a series of pipes. You control the ball by singing: the higher the pitch, the higher the ball goes!</h3>
   <!-- <script src="sketch.js"></script>
   <script src="pipe.js"></script>
   <script src="notes.js"></script> -->
