--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-database.js"></script>
   <script src="firebase-ui-auth.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css">
 <script src="firesetup.js"></script>
 <script type="text/javascript">
