added css link to game.html

--- a/public/game.html
+++ b/public/game.html
@@ -6,7 +6,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-database.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400" rel="stylesheet">
     <script src="firesetup.js"></script>
 <script type="text/javascript">
   var userId;
@@ -66,8 +67,6 @@
 
   <div id="firebaseui-auth-container">
     <div id="sign-in-status"></div>
-    <!-- <div id="user-email"></div>
-    <div id="account-details"></div> -->
     
   </div>
   <div id="user-info"></div>
