changed stats page to only show logged in user

--- a/public/stats.html
+++ b/public/stats.html
@@ -33,6 +33,7 @@
          
 
           userId = uid;
+          console.log(uid);
 
        
         });
@@ -51,8 +52,9 @@
     initApp()
   });
 
-  
-   var pickedUser = "28wcnZlrgDWVlIT93LN7sbHVZhB2";
+  let parameters = new URLSearchParams(window.location.search);
+  var pickedUser = parameters.get("uid");
+  console.log("pickedUser is " + pickedUser);
 
 
 </script>
