added logo to login page, adjusted stats page again

--- a/public/index.html
+++ b/public/index.html
@@ -83,4 +83,5 @@
     
   </div>
   <div id="user-info"></div>
+  <p style="text-align:center;"></p><img src="images/title.png" class="centerImage"></p>
 </body></html>
