fixed date additions

--- a/public/game.html
+++ b/public/game.html
@@ -60,7 +60,7 @@
 </script>
 </head>
 <body>
-    <h1>Pitch Tone Game</h1>
+    <!-- <h1>Pitch Tone Game</h1> -->
   <script src="sketch.js"></script>
   <script src="pipe.js"></script>
   <script src="notes.js"></script>
