fixed mystery increase difficulty thing, adjusted intro text

--- a/public/stats.html
+++ b/public/stats.html
@@ -53,8 +53,8 @@
   });
 
   let parameters = new URLSearchParams(window.location.search);
-  var pickedUser = parameters.get("uid");
-  //var pickedUser = "iZIfo4dyvZU44pnMtYvigaKaHSF2"
+  //var pickedUser = parameters.get("uid");
+  var pickedUser = "AOPv9Gpt4zfiMPiOXjUT4CMRDyu2"
   console.log("pickedUser is " + pickedUser);
 
 
